# CMakeTemplate

./: .gitignore  CMakeLists.txt  README.md
include/: foo.hpp
src/: CMakeLists.txt  foo.cpp  main.cpp
tests/: CMakeLists.txt  test_foo.cpp
